formatear el codigo

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,33 @@
-# http://editorconfig.org
-# Una propiedad especial que debe ser especificada en la parte superior del archivo fuera de
-# cualquier sección. Configura a true para detener la búsqueda de archivos .editorconfig en el archivo actual root = true root = true
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
+root = true
+
+# Unix-style newlines with a newline ending every file
 [*]
-# Estilo de sangría
-# Valores posibles: tabulación, espacio indent_style = space
-# Tamaño de la sangría en caracteres a un solo espacio # Valores posibles: un número entero, tabulación indent_size = 2
-# Carácter de final de línea
-# Possible values - lf, crlf, cr end_of_line = lf
-# Codificación de caracteres del archivo
-# Possible values - latin1, utf-8, utf-16be, utf-16le charset = utf-8
-# Indica si se recortan los espacios en blanco al final de las líneas # Valores posibles: true, false
-trim_trailing_whitespace = true
-# Desactivar para Markdown porque los espacios en blanco al final son importantes [*.md]
-trim_trailing_whitespace = false
-# Indica si el archivo debe terminar con una nueva línea # Possible values - true, false
+end_of_line = lf
 insert_final_newline = true
+
+# Matches multiple files with brace expansion notation
+# Set default charset
+[*.{js,py}]
+charset = utf-8
+
+# 4 space indentation
+[*.py]
+indent_style = space
+indent_size = 4
+
+# Tab indentation (no size specified)
+[Makefile]
+indent_style = tab
+
+# Indentation override for all JS under lib directory
+[lib/**.js]
+indent_style = space
+indent_size = 2
+
+# Matches the exact files either package.json or .travis.yml
+[{package.json,.travis.yml}]
+indent_style = space
+indent_size = 2
